--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
         run: npm ci
 
       - name: Build and export
-        run: npm run build && npm run export
-
+        run: npm run build
+        
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
